# expense-telegram-bot

./: .env.example  .gitignore  README.md  pyproject.toml
bot/: __init__.py  commands.py  main.py
bot/handlers/: expenses.py  reports.py  start.py
bot/keyboards/: expenses.py  language.py
core/: config.py
db/: models.py  repositories.py  session.py
services/: category_matcher.py  expense_parser.py  history_service.py  i18n.py  report_service.py
tests/: test_category_matcher.py  test_expense_parser.py  test_history_service.py  test_i18n.py
