[project]
name = "expense-telegram-bot"
version = "0.1.0"
description = "Telegram bot for tracking personal expenses."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.7,<4.0",
    "aiosqlite>=0.20,<1.0",
    "pydantic-settings>=2.3,<3.0",
    "sqlalchemy>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["bot*", "core*", "db*", "services*"]
